# oracle-resolver

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  package.json  pnpm-lock.yaml  program-id.md  rustfmt.toml
clients/js/: package.json  tsconfig.json
clients/js/src/: plugin.ts
clients/rust/: Cargo.toml
clients/rust/src/: lib.rs
configs/: codama.mjs  shank.mjs  validator.cjs
crates/cpi/: Cargo.toml
crates/cpi/src/: lib.rs  spl.rs  sys.rs
crates/cpi/src/hpl/: mod.rs  p2p.rs  parimutuel.rs  parimutuel_lulo.rs
crates/cpi/src/legacy/: amm.rs
idls/: oracle_resolver.json
programs/resolver/: Cargo.toml  build.rs
programs/resolver/src/: error.rs  instruction.rs  lib.rs  pda.rs
programs/resolver/src/processor/: create_v1.rs  mod.rs  resolve_legacy_amm_v1.rs  resolve_p2p_v1.rs  resolve_parimutuel_lulo_v1.rs  resolve_parimutuel_v1.rs
programs/resolver/src/state/: mod.rs  resolver.rs
programs/resolver/src/utils/: asserts.rs  mod.rs  options_outcome.rs  yes_no.rs
xtask/: Cargo.toml
