[workspace]
members = ["xtask", "crates/*", "programs/*", "clients/rust"]
resolver = "2"

[workspace.dependencies]
solana-program = "2.1"

spl-token-2022 = { version = "6.0", features = ["no-entrypoint"] }

borsh = { version = "1.5.3", features = ["derive", "std"] }
bytemuck = { version = "1.20", features = ["extern_crate_std"] }
bincode = "1.3"

thiserror = "2.0.6"
num-traits = "0.2.19"
num-derive = "0.4.2"

cpi = { path = "crates/cpi" }

optimistic-oracle = { git = "https://github.com/BrightSightOO/oracle-be", rev = "5c48af6" }

borsh-size = { git = "https://github.com/Hedgehog-Markets/solana-utils", rev = "474fbbc" }
include-idl = { git = "https://github.com/Hedgehog-Markets/solana-utils", rev = "474fbbc" }
security-txt = { git = "https://github.com/Hedgehog-Markets/solana-utils", rev = "474fbbc" }
solana-utils = { git = "https://github.com/Hedgehog-Markets/solana-utils", rev = "474fbbc" }

[profile.release]
opt-level = 3
strip = true
overflow-checks = true
lto = true
codegen-units = 1
